tests/ui/rust-2018/uniform-paths/prelude-fail-2.stderr
error: cannot use a tool module through an import
  --> $DIR/prelude-fail-2.rs:17:3
   |
LL | #[imported_rustfmt::skip]
   |   ^^^^^^^^^^^^^^^^
   |
note: the tool module imported here
  --> $DIR/prelude-fail-2.rs:10:5
   |
LL | use rustfmt as imported_rustfmt;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use a tool module through an import
  --> $DIR/prelude-fail-2.rs:18:13
   |
LL | #[tool_mod::imported_rustfmt::skip]
   |             ^^^^^^^^^^^^^^^^
   |
note: the tool module imported here
  --> $DIR/prelude-fail-2.rs:12:13
   |
LL |     pub use rustfmt as imported_rustfmt;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot determine resolution for the attribute macro `builtin::imported_inline`
  --> $DIR/prelude-fail-2.rs:16:3
   |
LL | #[builtin::imported_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 3 previous errors

